--- a/sh_portfolio/index.html
+++ b/sh_portfolio/index.html
@@ -82,7 +82,7 @@
 
             <section class="ly-contents__section" id="portfolio">
               <div class="contents-area">
-                <div class="tab-area depth01">
+                <div class="tab-area">
                   <div class="tab-area__btn nav">
                     <li class="on">
                       <span class="tab__btn">Web</span>
@@ -91,145 +91,96 @@
                     <li>
                       <span class="tab__btn">Design</span>
                     </li>
+                    <li>
+                      <span class="tab__btn">contact</span>
+                    </li>
                   </div>
                   <div class="tab-area__contents">
                     <div class="tab__contents on">
-                      <div class="tab-area depth02">
-                        <ul class="tab-area__btn">
-                          <li class="swiper-slide on">
-                            <span class="tab__btn">All</span>
+                      <div class="sort-area visible">
+                        <ul class="sort-area__btn">
+                          <li
+                            class="sort__btn sort__btn--all on"
+                            data-value="all"
+                          >
+                            All
                           </li>
 
-                          <li class="swiper-slide">
-                            <span class="tab__btn">반응형</span>
+                          <li
+                            class="sort__btn"
+                            data-type="type"
+                            data-value="media"
+                          >
+                            반응형
                           </li>
 
-                          <li class="swiper-slide">
-                            <span class="tab__btn">PC</span>
+                          <li
+                            class="sort__btn"
+                            data-type="type"
+                            data-value="pc"
+                          >
+                            PC
                           </li>
 
-                          <li class="swiper-slide">
-                            <span class="tab__btn">Mobile</span>
+                          <li
+                            class="sort__btn"
+                            data-type="type"
+                            data-value="mobile"
+                          >
+                            Mobile
                           </li>
                         </ul>
 
-                        <div class="tab-area__contents">
-                          <div class="tab__contents on">
-                            <div class="contents">
-                              <div class="img-area">
-                                <img src="images/works/carrot.png" alt="" />
-                              </div>
-                              <h4 class="title">당근을 찾아라!</h4>
-                              <!-- <a
-                                  href="works/carrot/carrot_game.html"
-                                  target="_blank"
-                                  class="view__btn"
-                                  >바로가기</a
-                                > -->
+                        <div class="sort-area__contents">
+                          <!-- <div class="sort__contents">
+                            <div class="img-area">
+                              <img src="images/works/carrot.png" alt="" />
                             </div>
-
-                            <div class="contents">
-                              <div class="img-area">
-                                <img src="images/works/gaon.png" alt="" />
-                              </div>
-                              <h4 class="title">가온스튜디오</h4>
-                              <!-- <a
-                                  href="works/gaon/gaon.html"
-                                  target="_blank"
-                                  class="view__btn"
-                                  >바로가기</a
-                                > -->
-                            </div>
-
-                            <div class="contents">
-                              <div class="img-area">
-                                <img src="images/works/tforu.png" alt="" />
-                              </div>
-                              <h4 class="title">티포유</h4>
-
-                              <!-- <a
-                                  href="works/tforu/tforu.html"
-                                  target="_blank"
-                                  class="view__btn"
-                                  >바로가기</a
-                                > -->
-                            </div>
+                            <h4 class="title">당근을 찾아라!</h4>
+                            <a
+                              href="works/tforu/tforu.html"
+                              target="_blank"
+                            ></a>
                           </div>
 
-                          <div class="tab__contents">
-                            <div class="contents">
-                              <div class="img-area">
-                                <img src="images/works/carrot.png" alt="" />
-                              </div>
-                              <h4 class="title">당근을 찾아라!</h4>
-                              <!-- <a
-                                  href="works/carrot/carrot_game.html"
-                                  target="_blank"
-                                  class="view__btn"
-                                  >바로가기</a
-                                > -->
+                          <div class="sort__contents">
+                            <div class="img-area">
+                              <img src="images/works/gaon.png" alt="" />
                             </div>
+                            <h4 class="title">가온스튜디오</h4>
+                            <a
+                              href="works/tforu/tforu.html"
+                              target="_blank"
+                            ></a>
                           </div>
 
-                          <div class="tab__contents">
-                            <div class="contents">
-                              <div class="img-area">
-                                <img src="images/works/carrot.png" alt="" />
-                              </div>
-                              <h4 class="title">당근을 찾아라!</h4>
-                              <!-- <a
-                                  href="works/carrot/carrot_game.html"
-                                  target="_blank"
-                                  class="view__btn"
-                                  >바로가기</a
-                                > -->
+                          <div class="sort__contents">
+                            <div class="img-area">
+                              <img src="images/works/tforu.png" alt="" />
                             </div>
-
-                            <div class="contents">
-                              <div class="img-area">
-                                <img src="images/works/gaon.png" alt="" />
-                              </div>
-                              <h4 class="title">가온스튜디오</h4>
-                              <!-- <a
-                                  href="works/gaon/gaon.html"
-                                  target="_blank"
-                                  class="view__btn"
-                                  >바로가기</a
-                                > -->
-                            </div>
-                          </div>
-
-                          <div class="tab__contents">
-                            <div class="contents">
-                              <div class="img-area">
-                                <img src="images/works/carrot.png" alt="" />
-                              </div>
-                              <h4 class="title">당근을 찾아라!</h4>
-                              <!-- <a
-                                  href="works/carrot/carrot_game.html"
-                                  target="_blank"
-                                  class="view__btn"
-                                  >바로가기</a
-                                > -->
-                            </div>
-
-                            <div class="contents">
-                              <div class="img-area">
-                                <img src="images/works/gaon.png" alt="" />
-                              </div>
-                              <h4 class="title">가온스튜디오</h4>
-                              <!-- <a
-                                  href="works/gaon/gaon.html"
-                                  target="_blank"
-                                  class="view__btn"
-                                  >바로가기</a
-                                > -->
-                            </div>
-                          </div>
+                            <h4 class="title">티포유</h4>
+                            <a
+                              href="works/tforu/tforu.html"
+                              target="_blank"
+                            ></a>
+                          </div> -->
                         </div>
+                        <!-- //sort-area__contents  -->
                       </div>
                     </div>
                     <div class="tab__contents">안녕하세요</div>
+                    <div class="tab__contents">
+                      <div class="msg-area">
+                        <textarea
+                          name="메세지"
+                          id="txtArea"
+                          placeholder="글을 남겨주세요"
+                        ></textarea>
+                        <button type="submit" class="form-submit">
+                          보내기
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -242,10 +193,6 @@
 
       <footer>
         <div class="ly-footer">
-          <div class="msg-area">
-            <textarea name="메세지" id="txtArea"></textarea>
-            <button type="submit" class="form-submit">보내기</button>
-          </div>
           <div class="contact">
             <ul>
               <li>@ 2022 Designed by 김서현</li>
@@ -270,7 +217,7 @@
     </div>
     <!-- //ly-wrapper -->
 
-    <script>
+    <!-- <script>
       var winW = window.innerWidth;
       var swiper = undefined;
       var swiper01 = undefined;
@@ -310,7 +257,7 @@
       window.addEventListener('resize', () => {
         winW = window.innerWidth;
         initSlide();
-      });
-    </script>
+      }); -->
+    <!-- </script> -->
   </body>
 </html>
