--- a/index.html
+++ b/index.html
@@ -44,42 +44,61 @@
               </p>
             </div>
           </div>
+          <!-- //ly-contents__visual -->
           <div class="ly-contents__main">
-            <section class="ly-contents__section" id="me">
-              <div class="contents-area"></div>
-            </section>
-            <!-- //report -->
+            <section class="ly-contents__section" id="info">
+              <div class="contents-area">
+                <div class="contents-area__left">
+                  <article class="img-area"></article>
+                </div>
+                <div class="contents-area__right">
+                  <div class="info__cont">
+                    <div class="info__cont-title">
+                      <h2>김서현<span> UXUI Web Publisher</span></h2>
+                    </div>
 
-            <!-- <section class="ly-contents__section" id="skill">
-              <div class="contents-area mySwiper01">
-                <h3 class="title">SKILLS</h3>
-                <div class="skills-area swiper-wrapper">
-                  <div class="skill swiper-slide">
-                    <div class="skill-name" id="html"></div>
+                    <div class="info__cont-group">
+                      <h3>Career</h3>
+                      <ul>
+                        <li>의류사이트 웹퍼블리셔</li>
+                        <li>현) 포스코 협력 웹퍼블리셔</li>
+                      </ul>
+                    </div>
+
+                    <div class="info__cont-group">
+                      <h3>Project</h3>
+                      <ul>
+                        <li>현) 포스코 ESG성과 데이터 통합관리</li>
+                        <li>현) 포스코 FTA원산지Portal</li>
+                        <li>현) 포스코 steel-n-com</li>
+                        <li>현) 포스코 글로벌표준문서관리시스템</li>
+                        <li>현) 포스코 표준문서관리시스템</li>
+                        <li>현) 포스코 사외도시락</li>
+                        <li>현) 포스코 생산속보</li>
+                        <li>현) 포스코 상태관리시스템</li>
+                        <li>현) 포스코 생산속보</li>
+                        <li>현) 포스코 스마트안전APP</li>
+                        <li>현) 포스코 오픈연구소</li>
+                        <li>현) 포스코 출하속보</li>
+                        <li>현) 포스코 REPOM</li>
+                        <li>현) 포스코 방문자 태깅 모니터링</li>
+                      </ul>
+                    </div>
                   </div>
-
-                  <div class="skill swiper-slide">
-                    <div class="skill-name" id="css"></div>
-                  </div>
-
-                  <div class="skill swiper-slide">
-                    <div class="skill-name"></div>
-                  </div>
-
-                  <div class="skill swiper-slide">
-                    <div class="skill-name" id="js"></div>
-                  </div>
-
-                  <div class="skill swiper-slide">
-                    <div class="skill-name" id="jquery"></div>
-                  </div>
-
-                  <div class="skill swiper-slide">
-                    <div class="skill-name" id="ps"></div>
+                  <div class="info__cont">
+                    <ul class="skill-item">
+                      <li class="skill-name" id="html">HTML</li>
+                      <li class="skill-name" id="css">CSS</li>
+                      <li class="skill-name" id="sass">SASS</li>
+                      <li class="skill-name" id="js">JAVASCRIPT</li>
+                      <li class="skill-name" id="jquery">JQUERY</li>
+                      <li class="skill-name" id="ps">PHOTOSHOP</li>
+                    </ul>
                   </div>
                 </div>
               </div>
-            </section> -->
+            </section>
+            <!-- //info -->
 
             <section class="ly-contents__section" id="portfolio">
               <div class="contents-area">
@@ -111,7 +130,7 @@
 
                         <div class="sort-area__contents">
                           <div class="sort__contents">
-                            <div class="contents" data-type="pc">
+                            <div class="contents on" data-type="pc">
                               <div class="img-area">
                                 <img src="images/works/carrot.png" alt="" />
                               </div>
@@ -191,20 +210,16 @@
             </section>
             <!-- //portfolio -->
           </div>
+          <!-- //ly-contents__main -->
         </div>
+        <!-- //ly-contents__wrap -->
       </main>
       <!-- //main -->
 
       <footer>
         <div class="ly-footer">
           <div class="contact">
-            <ul>
-              <li>@ 2022 Designed by 김서현</li>
-              <li>HP : +82 10 5048 2517</li>
-              <li>Email : shhs0902@naver.com</li>
-              <li>KAKAO ID : shhs0902</li>
-            </ul>
-            <div class="ly-footer__logo">SeoHyun's Web portfolio</div>
+            <p>Copyright ⓒ Designed by KimSeoHyun All Rights Reserved</p>
           </div>
         </div>
       </footer>
