--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/ui.css" />
     <script type="text" src="./data/item.json"></script>
+    <script src="./js/vendor/jquery-1.11.3.min.js"></script>
     <script src="js/ui.js" defer></script>
     <title>Kim Seo Hyun</title>
   </head>
@@ -154,6 +155,7 @@
                             <div class="contents on" data-type="media">
                               <a href="works/gaon/gaon.html" target="_blank">
                                 <div class="img-area">
+                                  보내
                                   <img src="images/works/gaon.png" alt="" />
                                 </div>
                                 <h4 class="title">가온스튜디오</h4>
